updating to be more like other case studies

--- a/README.Rmd
+++ b/README.Rmd
@@ -34,17 +34,16 @@ Kuo, Pei-Lun and Jager, Leah and Taub, Margaret and Hicks, Stephanie. (2019, Feb
 
 ### Title 
 
-Exploring Health Expenditure using State-level data 
+Exploring Health Expenditure using State-level data in the United States
 
 Health policy in the United States is complicated, and several 
-forms of healthcare coverage exist, including both federal 
-goverment-led healthcare policy, and private insurance company.
+forms of healthcare coverage exist, including both coverage by federal 
+goverment-led healthcare policy, and  by private insurance companies.
 Before making any inference about the relationship between 
 health condition and health policy, it is important for us to 
 have a general idea about healthcare economics in the United 
-States. Thus, We are interested in getting sense of the health
-expenditure, including healthcare coverage and healthcare spending,
-across the United States.  
+States. Thus, We are interested in getting sense of healthcare 
+coverage and healthcare spending, across the United States.  
 
 ### Motivating questions
 
