--- a/ocs-healthexpenditure.Rmd
+++ b/ocs-healthexpenditure.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "OpenCaseStudies - Health Expenditure"
+title: "OpenCaseStudies - Exploring Health Expenditure using State-level data in the United States"
 output:
   html_document:
     code_download: yes
