--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ Kuo, Pei-Lun and Jager, Leah and Taub, Margaret and Hicks, Stephanie. (2019, Feb
 
 ### Title 
 
-Exploring Health Expenditure using State-level data in the United States
+Exploring health expenditure using state-level data in the United States
 
 Health policy in the United States is complicated, and several 
 forms of healthcare coverage exist, including both coverage by federal 
@@ -43,7 +43,7 @@ Before making any inference about the relationship between
 health condition and health policy, it is important for us to 
 have a general idea about healthcare economics in the United 
 States. Thus, We are interested in getting sense of healthcare 
-coverage and healthcare spending, across the United States.  
+coverage and healthcare spending across the United States.  
 
 ### Motivating questions
 
